script-manifest/utility-argocd/kubernetes-ui-argocd-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-loadbalancer
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  ports:
    - name: https
      port: 443
      targetPort: 8080
