script-manifest/utility-argocd/kubernetes-ui-argocd-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
    app.kubernetes.io/part-of: argocd
  ports:
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30002 # Specify a NodePort or omit for automatic assignment
