script-manifest/utility-argocd/kubernetes-ui-argocd-svc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - anindhito.ui.infra.argocd.local
    secretName: argocd-tls
  rules:
  - host: anindhito.ui.infra.argocd.local
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 443  # <-- Change from 8080 to 443
